# local-flash-gen

./: CMakeLists.txt
src/: main.cpp
